# lamoom-python

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yaml  run-unit-tests.yaml
docs/: getting_started_notebook.ipynb
docs/evaluate_prompts_quality/: evaluate_prompt_quality.py  flow_prompt_service.py
docs/sequence_diagrams/: add_ideal_answer_to_log.uml  save_user_interactions.md  save_user_interactions.uml  sequence_diagram_lamoom_call.uml  test_creation.md  test_creation.uml
docs/test_data/: medical_questions_answers.csv
examples/: pyproject.toml
examples/evaluate_prompts_quality/: evaluate_prompt_quality.py  prompt.py
flow_prompt/: __init__.py
flow_prompt/ai_models/: ai_model.py  ai_model_registry.py  attempt_to_call.py
flow_prompt/prompt/: flow_prompt.py
lamoom/: __init__.py  exceptions.py  responses.py  settings.py  validators.py
lamoom/ai_models/: ai_model.py  attempt_to_call.py  behaviour.py  constants.py  tools.py
lamoom/prompt/: base_prompt.py  lamoom.py  prompt.py
lamoom/response_parsers/: response_parser.py
lamoom/services/: SaveWorker.py
tests/: conftest.py  test_ai_model_tag_parser.py  test_integrational.py  test_integrational_validators.py  test_validators.py
tests/ai_models/: test_gemini.py  test_utils.py
tests/prompts/: test_chat.py  test_ci_cd.py  test_create_test.py  test_model.py  test_nebius.py  test_pricing.py  test_prompt.py  test_stream.py  test_web_call.py
tests/response_parsers/: test_response_parsers.py
(+17 files in other folders)
