[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Lamoom Engineering Team <engineering@lamoom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lamoom = {version = "^0.1.4a11", source = "test"}
python-dotenv = "^1.0.1"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
